--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "goit-react-hw-06-phonebook",
-  "homepage": "https://ironhedgehog.github.io/goit-react-hw-06-phonebook/",
+  "name": "goit-react-hw-07-phonebook-thunk",
+  "homepage": "https://ironhedgehog.github.io/goit-react-hw-07-phonebook-thunk/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
     "gh-pages": "^3.2.3",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
