--- a/package.json
+++ b/package.json
@@ -1,9 +1,16 @@
 {
-  "name": "goit-react-hw-07-phonebook-thunk",
-  "homepage": "https://ironhedgehog.github.io/goit-react-hw-07-phonebook-thunk/",
+  "name": "goit-react-hw-08-phonebook",
+  "homepage": "https://ironhedgehog.github.io/goit-react-hw-08-phonebook/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@mui/icons-material": "^5.6.2",
+    "@mui/material": "^5.6.4",
+    "@mui/styled-engine-sc": "^5.6.1",
     "@reduxjs/toolkit": "^1.7.2",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
@@ -14,12 +21,13 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "sass": "^1.49.7",
     "shortid": "^2.2.16",
-    "styled-components": "^5.3.3",
+    "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
